@@ -134,6 +134,18 @@ name|DFS_WEBHDFS_ACL_PERMISSION_PATTERN_DEFAULT
 init|=
 literal|"^(default:)?(user|group|mask|other):[[A-Za-z_][A-Za-z0-9._-]]*:([rwx-]{3})?(,(default:)?(user|group|mask|other):[[A-Za-z_][A-Za-z0-9._-]]*:([rwx-]{3})?)*$"
 decl_stmt|;
+DECL|field|DFS_WEBHDFS_SOCKET_CONNECT_TIMEOUT_KEY
+name|String
+name|DFS_WEBHDFS_SOCKET_CONNECT_TIMEOUT_KEY
+init|=
+literal|"dfs.webhdfs.socket.connect-timeout"
+decl_stmt|;
+DECL|field|DFS_WEBHDFS_SOCKET_READ_TIMEOUT_KEY
+name|String
+name|DFS_WEBHDFS_SOCKET_READ_TIMEOUT_KEY
+init|=
+literal|"dfs.webhdfs.socket.read-timeout"
+decl_stmt|;
 DECL|field|DFS_WEBHDFS_OAUTH_ENABLED_KEY
 name|String
 name|DFS_WEBHDFS_OAUTH_ENABLED_KEY
