@@ -170,6 +170,26 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|List
 import|;
 end_import
@@ -227,6 +247,22 @@ operator|.
 name|fs
 operator|.
 name|Path
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hdfs
+operator|.
+name|client
+operator|.
+name|HdfsClientConfigKeys
 import|;
 end_import
 
@@ -316,6 +352,58 @@ name|org
 operator|.
 name|junit
 operator|.
+name|runner
+operator|.
+name|RunWith
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|runners
+operator|.
+name|Parameterized
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|runners
+operator|.
+name|Parameterized
+operator|.
+name|Parameter
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
+name|runners
+operator|.
+name|Parameterized
+operator|.
+name|Parameters
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|junit
+operator|.
 name|Test
 import|;
 end_import
@@ -325,6 +413,13 @@ comment|/**  * This test suite checks that WebHdfsFileSystem sets connection tim
 end_comment
 
 begin_class
+annotation|@
+name|RunWith
+argument_list|(
+name|Parameterized
+operator|.
+name|class
+argument_list|)
 DECL|class|TestWebHdfsTimeouts
 specifier|public
 class|class
@@ -456,6 +551,69 @@ block|}
 block|}
 argument_list|)
 decl_stmt|;
+DECL|enum|TimeoutSource
+DECL|enumConstant|ConnectionFactory
+DECL|enumConstant|Configuration
+specifier|public
+enum|enum
+name|TimeoutSource
+block|{
+name|ConnectionFactory
+block|,
+name|Configuration
+block|}
+empty_stmt|;
+comment|/**    * Run all tests twice: once with the timeouts set by the    * connection factory, and again with the timeouts set by    * configuration options.    */
+annotation|@
+name|Parameters
+argument_list|(
+name|name
+operator|=
+literal|"timeoutSource={0}"
+argument_list|)
+DECL|method|data ()
+specifier|public
+specifier|static
+name|Collection
+argument_list|<
+name|Object
+index|[]
+argument_list|>
+name|data
+parameter_list|()
+block|{
+return|return
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+operator|new
+name|Object
+index|[]
+index|[]
+block|{
+block|{
+name|TimeoutSource
+operator|.
+name|ConnectionFactory
+block|}
+block|,
+block|{
+name|TimeoutSource
+operator|.
+name|Configuration
+block|}
+block|}
+argument_list|)
+return|;
+block|}
+annotation|@
+name|Parameter
+DECL|field|timeoutSource
+specifier|public
+name|TimeoutSource
+name|timeoutSource
+decl_stmt|;
 annotation|@
 name|Before
 DECL|method|setUp ()
@@ -513,6 +671,50 @@ name|getLocalPort
 argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|timeoutSource
+operator|==
+name|TimeoutSource
+operator|.
+name|Configuration
+condition|)
+block|{
+name|String
+name|v
+init|=
+name|Integer
+operator|.
+name|toString
+argument_list|(
+name|SHORT_SOCKET_TIMEOUT
+argument_list|)
+operator|+
+literal|"ms"
+decl_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|HdfsClientConfigKeys
+operator|.
+name|DFS_WEBHDFS_SOCKET_CONNECT_TIMEOUT_KEY
+argument_list|,
+name|v
+argument_list|)
+expr_stmt|;
+name|conf
+operator|.
+name|set
+argument_list|(
+name|HdfsClientConfigKeys
+operator|.
+name|DFS_WEBHDFS_SOCKET_READ_TIMEOUT_KEY
+argument_list|,
+name|v
+argument_list|)
+expr_stmt|;
+block|}
 name|fs
 operator|=
 name|WebHdfsTestUtil
@@ -526,12 +728,22 @@ operator|.
 name|WEBHDFS_SCHEME
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|timeoutSource
+operator|==
+name|TimeoutSource
+operator|.
+name|ConnectionFactory
+condition|)
+block|{
 name|fs
 operator|.
 name|connectionFactory
 operator|=
 name|connectionFactory
 expr_stmt|;
+block|}
 name|clients
 operator|=
 operator|new
